--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -32,3 +32,7 @@ spring.web.locale-resolver=fixed
 # Configurações de depuração (opcional)
 management.endpoints.web.exposure.include=*
 management.endpoint.health.show-details=always
+
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
